# csvsql

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  app.js  index.html  package-lock.json  package.json  pyproject.toml  run-tests.sh  sample.csv  sample2.csv  style.css
csvsql/: __init__.py  __main__.py  cli.py
csvsql/static/: app.js  index.html  style.css
test/: helpers.js  playwright.config.js  sample.xlsx  sample1.csv  sample2.csv  sample2.psv
test/e2e/: keyboard.spec.js  window-management.spec.js
test/integration/: ai-rich-blocks.spec.js  file-open.spec.js  save.spec.js  select-into.spec.js  sql-queries.spec.js  table-editing.spec.js
test/unit/: extract-into.spec.js  sanitize.spec.js
