[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csvsql"
version = "0.7.1"
description = "A browser-based CSV database with SQL query support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Mark Kim"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Utilities",
]
keywords = ["csv", "sql", "database", "browser"]

[project.urls]
Homepage = "https://github.com/markuskimius/csvsql"
Repository = "https://github.com/markuskimius/csvsql"

[project.scripts]
csvsql = "csvsql.cli:main"
csvsqlw = "csvsql.cli:main"

[tool.setuptools.packages.find]
include = ["csvsql*"]

[tool.setuptools.package-data]
csvsql = ["static/*"]
